tests/cases/compiler-development/artifact/errors/diagnostic-invalid-assignment.diagnostic
diagnostic error code=T0001 family=type message="cannot assign to immutable binding 'value'" sources=1 labels=1 notes=0 helps=0
  Source source_id=0 kind=file path="tests/cases/compiler-development/artifact/errors/diagnostic-invalid-assignment.ari" display="tests/cases/compiler-development/artifact/errors/diagnostic-invalid-assignment.ari" bytes=67
  Label index=0 role=primary source_id=0 source="tests/cases/compiler-development/artifact/errors/diagnostic-invalid-assignment.ari" line=3 column=3 end_line=3 end_column=8 byte_start=38 byte_end=43 message=""
  Snippet label=0 text="  --> tests/cases/compiler-development/artifact/errors/diagnostic-invalid-assignment.ari:3:3\n   |\n 3 |   value = 2;\n   |   ^^^^^"
